Changes for 1.2.7
* Fixed a bug where Undo-ing the placement of a factory, to a territory that already had a factory, under ww2v3 isSBRAffectsUnitProduction rules, caused max damage to be done to the original factory. (veqryn)

* Completely re-wrote isConstructions to be completely customizable. Factories now count as constructions when being placed, eliminating placement code specifically for factories. 
  New properties for isConstructions: "constructionType" is a string identifying what kind of construction it order to determine stacking, "constructionsPerTerrPerTypePerTurn" and "maxConstructionsPerTypePerTerr" to limit placement.  
  Created a new property called "More Constructions with Factory" as the counterpart to the without factory version.  isConstructions can be any unit, factory, aaGun, airfield, infantry, land unit, etc. (veqryn)

* Some work on completely rewriting isConstructions. (veqryn)

* Another patch for Dynamix AI. (wisconsin)

* Major patch for Dynamix AI, including new settings window to customize in-game certain variables the AI uses. (Wisconsin)

* Fix for serializing and techs java error. (squid daddy)

* Added Napoleonic Empires, a beautiful map created by Veqryn and Lssah. Updated to use triggers and combat transports. (veqryn)

* Fix for support/triggers/rules java error. (squid daddy)

* New player attachments, "destroysPUs", which when set for a player means that player destroys their PUs rather than let them be captured. (veqryn)

* New player attachments to deal with multiple capitals, "retainCapitalNumber" and "retainCapitalProduceNumber", which be set to the number of capitals need to lose money and gain/spend it respectively. (veqryn)

* New player rule, "maxPlacePerTerritory", overrides both factory rules and infinite placement. Also fixed a bug in isCombatTransport that stopped the casualty picker from choosing it. (veqryn)
